# openipmi-mirror

./: ChangeLog  Makefile.am  OpenIPMI.spec.in  basic_ui.c  configure.in  domain.c  entity.c  ipmi.c  ipmi_lan.c  ipmi_smi.c  ipmilan.8  lanserv.c  mc.c  sample.c  sdr.c  sensor.c  ui.c
cmdlang/: Makefile.am  cmd_domain.c  cmd_fru.c  cmd_mc.c  cmd_sensor.c  cmdlang.c  os_debug.c  out_fru.c
doc/: IPMI_Problems  Makefile.am  OpenIPMI.texi
glib/: glib_os_hnd.c
include/OpenIPMI/: Makefile.am  NetworkSupport.h  OS_Port.h  ipmi_addr.h  ipmi_bits.h  ipmi_conn.h  ipmi_control.h  ipmi_domain.h  ipmi_entity.h  ipmi_fru.h  ipmi_int.h  ipmi_lan.h  ipmi_mc.h  ipmi_oem.h  ipmi_sel.h  ipmi_sensor.h  ipmi_smi.h  ipmi_types.h  ipmiif.h  ipmiif.h.in  lanserv.h  mxp.h  os_handler.h
include/OpenIPMI/internal/: ipmi_domain.h  ipmi_entity.h  ipmi_event.h  ipmi_int.h  ipmi_sel.h  ipmi_sensor.h
lanserv/: Makefile.am  atca.emu  lanserv.c  lanserv_config.c  lanserv_emu.c  lanserv_ipmi.c
lib/: Makefile.am  chassis.c  conn.c  control.c  domain.c  entity.c  event.c  fru.c  ipmi.c  ipmi_lan.c  ipmi_smi.c  ipmi_sol.c  lanparm.c  mc.c  oem_atca.c  oem_atca_conn.c  oem_force_conn.c  oem_intel.c  oem_motorola_mxp.c  oem_motorola_mxp_intf.c  opq.c  pef.c  pet.c  sdr.c  sel.c  sensor.c  strings.c
man/: ipmi_cmdlang.7  ipmicmd.1
sample/: Makefile.am  ipmicmd.c  sample.c  sample2.c  sample3.c
swig/: Makefile.am  OpenIPMI.i
swig/perl/: Makefile.am  OpenIPMI_lang.i  OpenIPMI_perl.c  sample  test_chan  test_fru  test_lanparm  test_pet
ui/: Makefile.am  basic_ui.c  ui.c  ui_os.c
unix/: Makefile.am  posix_os_hnd.c  posix_thread_os_hnd.c  test_handlers.c
utils/: ipmi_auth.c  ipmi_malloc.c  os_handler.c
